--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
- 
-    <title>Rahul Portfolio</title>
+    <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap">
+    <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Poppins&display=swap">
+    <title>Công Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
