--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap">
     <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Poppins&display=swap">
-    <title>Công Portfolio</title>
+    <title>Công-Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
